Add IPA pronunciations

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -170,7 +170,7 @@
                     </li>
 
                     <ul>
-                        <li><b>[t̪ɑ ˈwa.le kɪˈt̪ab ˈu.li.də.lo]</b></li>
+                        <li><b>[t̪ɑ ˈwa.le kɪˈt̪ab ˈu.li.d̪ə.lo]</b></li>
                     </ul>
 
                     <li>
