--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -86,8 +86,8 @@
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو</span> - [ˈt̪a.so] / <span class="text-pashto">تاسې</span> - [ˈt̪a.se]</td>
-                            <td><span class="text-pashto">تاسو</span> - [ˈt̪a.so] / <span class="text-pashto">تاسې</span> - [ˈt̪a.se]</td>
+                            <td><span class="text-pashto">تاسو</span> - [ˈt̪ɑ.so] / <span class="text-pashto">تاسې</span> - [ˈt̪ɑ.se]</td>
+                            <td><span class="text-pashto">تاسو</span> - [ˈt̪ɑ.so] / <span class="text-pashto">تاسې</span> - [ˈt̪ɑ.se]</td>
                         </tr>
                         <tr>
                             <td>He/it</td>
