--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -80,45 +80,45 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه</span></td>
+                            <td><span class="text-pashto">زه</span> - [zə]</td>
                             <td>Am</td>
-                            <td><span class="text-pashto">یم</span></td>
+                            <td><span class="text-pashto">یم</span> - [jəm]</td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td><span class="text-pashto">ته</span></td>
+                            <td><span class="text-pashto">ته</span> - [t̪ə]</td>
                             <td>Are</td>
-                            <td><span class="text-pashto">یې</span></td>
+                            <td><span class="text-pashto">یې</span> - [je]</td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو/تاسې</span></td>
+                            <td><span class="text-pashto">تاسو/تاسې</span> - [ˈt̪a.so] / [ˈt̪a.se]</td>
                             <td>Are</td>
-                            <td><span class="text-pashto">یئ</span></td>
+                            <td><span class="text-pashto">یئ</span> - [jej]</td>
                         </tr>
                         <tr>
                             <td>He/it</td>
-                            <td><span class="text-pashto">هغه</span></td>
+                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
                             <td>Is</td>
-                            <td><span class="text-pashto">دی</span></td>
+                            <td><span class="text-pashto">دی</span> - [d̪aj]</td>
                         </tr>
                         <tr>
                             <td>She/it</td>
-                            <td><span class="text-pashto">هغه</span></td>
+                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
                             <td>Is</td>
-                            <td><span class="text-pashto">ده</span></td>
+                            <td><span class="text-pashto">ده</span> - [d̪a]</td>
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ/موږ</span></td>
+                            <td><span class="text-pashto">مونږ</span> - [mung] / <span class="text-pashto">موږ</span> - [mug]</td>
                             <td>Are</td>
-                            <td><span class="text-pashto">یو</span></td>
+                            <td><span class="text-pashto">یو</span> - [ju]</td>
                         </tr>
                         <tr>
                             <td>They</td>
-                            <td><span class="text-pashto">هغوی</span></td>
+                            <td><span class="text-pashto">هغوی</span> - [haɣwi]</td>
                             <td>Are</td>
-                            <td><span class="text-pashto">دي</span></td>
+                            <td><span class="text-pashto">دي</span> - [d̪i]</td>
                         </tr>
                     </tbody>
                 </table>
@@ -143,51 +143,51 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه</span></td>
+                            <td><span class="text-pashto">زه</span> - [zə]</td>
                             <td>Was</td>
-                            <td><span class="text-pashto">وم</span></td>
+                            <td><span class="text-pashto">وم</span> - [wum]</td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td><span class="text-pashto">ته</span></td>
+                            <td><span class="text-pashto">ته</span> - [t̪ə]</td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وې</span></td>
+                            <td><span class="text-pashto">وې</span> - [we]</td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو/تاسې</span></td>
+                            <td><span class="text-pashto">تاسو/تاسې</span> - [ˈt̪a.so] / [ˈt̪a.se]</td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وئ</span></td>
+                            <td><span class="text-pashto">وئ</span> - [wej]</td>
                         </tr>
                         <tr>
                             <td>He/it</td>
-                            <td><span class="text-pashto">هغه</span></td>
+                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
                             <td>Was</td>
-                            <td><span class="text-pashto">و</span></td>
+                            <td><span class="text-pashto">و</span> - [wo]</td>
                         </tr>
                         <tr>
                             <td>She/it</td>
-                            <td><span class="text-pashto">هغه</span></td>
+                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
                             <td>Was</td>
-                            <td><span class="text-pashto">وه</span></td>
+                            <td><span class="text-pashto">وه</span> - [wa]</td>
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ/موږ</span></td>
+                            <td><span class="text-pashto">مونږ</span> - [mung] / <span class="text-pashto">موږ</span> - [mug]</td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وو</span></td>
+                            <td><span class="text-pashto">وو</span> - [wu]</td>
                         </tr>
                         <tr>
                             <td>They (masculine)</td>
-                            <td><span class="text-pashto">هغوی</span></td>
+                            <td><span class="text-pashto">هغوی</span> - [haˈɣwi]</td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وو</span></td>
+                            <td><span class="text-pashto">وو</span> - [wu]</td>
                         </tr>
                         <tr>
                             <td>They (feminine)</td>
-                            <td><span class="text-pashto">هغوی</span></td>
+                            <td><span class="text-pashto">هغوی</span> - [haˈɣwi]</td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وې</span></td>
+                            <td><span class="text-pashto">وې</span> - [we]</td>
                         </tr>
                     </tbody>
                 </table>
@@ -214,39 +214,39 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه (به)</span></td>
+                            <td><span class="text-pashto">زه (به)</span> - [zə (ba)]</td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">یم</span></td>
+                            <td><span class="text-pashto">یم</span> - [jəm]</td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td><span class="text-pashto">ته (به)</span></td>
+                            <td><span class="text-pashto">ته (به)</span> - [t̪ə (ba)]</td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">یې</span></td>
+                            <td><span class="text-pashto">یې</span> - [je]</td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو/تاسې (به)</span></td>
+                            <td><span class="text-pashto">تاسو/تاسې (به)</span> - [ˈt̪ɑ.so/ˈt̪ɑ.se (ba)]</td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">یئ</span></td>
+                            <td><span class="text-pashto">یئ</span> - [jej]</td>
                         </tr>
                         <tr>
                             <td>He/she/it</td>
-                            <td><span class="text-pashto">هغه (به)</span></td>
+                            <td><span class="text-pashto">هغه (به)</span> - [haˈɣa (ba)]</td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">وي</span></td>
+                            <td><span class="text-pashto">وي</span> - [wi]</td>
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ/موږ (به)</span></td>
+                            <td><span class="text-pashto">مونږ/موږ (به)</span> - [mung/mug (ba)]</td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">یو</span></td>
+                            <td><span class="text-pashto">یو</span> - [ju]</td>
                         </tr>
                         <tr>
                             <td>They</td>
-                            <td><span class="text-pashto">هغوی (به)</span></td>
+                            <td><span class="text-pashto">هغوی (به)</span> - [haˈɣwi (ba)]</td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">وي</span></td>
+                            <td><span class="text-pashto">وي</span> - [wi]</td>
                         </tr>
                     </tbody>
                 </table>
