Add IPA pronunciations

--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -76,38 +76,38 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه</span> - [zə]</td>
-                            <td><span class="text-pashto">ما</span> - [mɑ]</td>
+                            <td><span class="text-pashto">زه</span> - <b>[zə]</b></td>
+                            <td><span class="text-pashto">ما</span> - <b>[mɑ]</b></td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td><span class="text-pashto">ته</span> - [t̪ə]</td>
-                            <td><span class="text-pashto">تا</span> - [t̪ɑ]</td>
+                            <td><span class="text-pashto">ته</span> - <b>[t̪ə]</b></td>
+                            <td><span class="text-pashto">تا</span> - <b>[t̪ɑ]</b></td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو</span> - [ˈt̪ɑ.so] / <span class="text-pashto">تاسې</span> - [ˈt̪ɑ.se]</td>
-                            <td><span class="text-pashto">تاسو</span> - [ˈt̪ɑ.so] / <span class="text-pashto">تاسې</span> - [ˈt̪ɑ.se]</td>
+                            <td><span class="text-pashto">تاسو</span> - <b>[ˈt̪ɑ.so] / <span class="text-pashto">تاسې</span> - <b>[ˈt̪ɑ.se]</b></td>
+                            <td><span class="text-pashto">تاسو</span> - <b>[ˈt̪ɑ.so] / <span class="text-pashto">تاسې</span> - <b>[ˈt̪ɑ.se]</b></td>
                         </tr>
                         <tr>
                             <td>He/it</td>
-                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
-                            <td><span class="text-pashto">هغه</span> - [haˈɣə]</td>
+                            <td><span class="text-pashto">هغه</span> - <b>[haˈɣa]</b></td>
+                            <td><span class="text-pashto">هغه</span> - <b>[haˈɣə]</b></td>
                         </tr>
                         <tr>
                             <td>She/it</td>
-                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
-                            <td><span class="text-pashto">هغې</span> - [haˈɣe]</td>
+                            <td><span class="text-pashto">هغه</span> - <b>[haˈɣa]</b></td>
+                            <td><span class="text-pashto">هغې</span> - <b>[haˈɣe]</b></td>
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ</span> - [mung] / <span class="text-pashto">موږ</span> - [mug]</td>
-                            <td><span class="text-pashto">مونږ</span> - [mung] / <span class="text-pashto">موږ</span> - [mug]</td>
+                            <td><span class="text-pashto">مونږ</span> - <b>[mung] / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
+                            <td><span class="text-pashto">مونږ</span> - <b>[mung] / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
                         </tr>
                         <tr>
                             <td>They</td>
-                            <td><span class="text-pashto">هغوی</span> - [haˈɣwi]</td>
-                            <td><span class="text-pashto">هغوی</span> - [haˈɣwi]</td>
+                            <td><span class="text-pashto">هغوی</span> - <b>[haˈɣwi]</b></td>
+                            <td><span class="text-pashto">هغوی</span> - <b>[haˈɣwi]</b></td>
                         </tr>
                     </tbody>
                 </table>
