--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -80,45 +80,45 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه</span> - [zə]</td>
+                            <td><span class="text-pashto">زه</span> - <b></b>[zə]</b></tr>td>
                             <td>Am</td>
-                            <td><span class="text-pashto">یم</span> - [jəm]</td>
+                            <td><span class="text-pashto">یم</span> - <b>[jəm]</b></td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td><span class="text-pashto">ته</span> - [t̪ə]</td>
+                            <td><span class="text-pashto">ته</span> - <b>[t̪ə]</b></td>
                             <td>Are</td>
-                            <td><span class="text-pashto">یې</span> - [je]</td>
+                            <td><span class="text-pashto">یې</span> - <b>[je]</b></td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو/تاسې</span> - [ˈt̪a.so] / [ˈt̪a.se]</td>
+                            <td><span class="text-pashto">تاسو/تاسې</span> - <b>[ˈt̪a.so] / [ˈt̪a.se]</b></td>
                             <td>Are</td>
-                            <td><span class="text-pashto">یئ</span> - [jej]</td>
+                            <td><span class="text-pashto">یئ</span> - <b>[jej]</b></td>
                         </tr>
                         <tr>
                             <td>He/it</td>
-                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
+                            <td><span class="text-pashto">هغه</span> - <b>[haˈɣa]</b></td>
                             <td>Is</td>
-                            <td><span class="text-pashto">دی</span> - [d̪aj]</td>
+                            <td><span class="text-pashto">دی</span> - <b>[d̪aj]</b></td>
                         </tr>
                         <tr>
                             <td>She/it</td>
-                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
+                            <td><span class="text-pashto">هغه</span> - <b>[haˈɣa]</b></td>
                             <td>Is</td>
-                            <td><span class="text-pashto">ده</span> - [d̪a]</td>
+                            <td><span class="text-pashto">ده</span> - <b>[d̪a]</b></td>
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ</span> - [mung] / <span class="text-pashto">موږ</span> - [mug]</td>
+                            <td><span class="text-pashto">مونږ</span> - <b>[mung] / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
                             <td>Are</td>
-                            <td><span class="text-pashto">یو</span> - [ju]</td>
+                            <td><span class="text-pashto">یو</span> - <b>[ju]</b></td>
                         </tr>
                         <tr>
                             <td>They</td>
-                            <td><span class="text-pashto">هغوی</span> - [haɣwi]</td>
+                            <td><span class="text-pashto">هغوی</span> - <b>[haɣwi]</b></td>
                             <td>Are</td>
-                            <td><span class="text-pashto">دي</span> - [d̪i]</td>
+                            <td><span class="text-pashto">دي</span> - <b>[d̪i]</b></td>
                         </tr>
                     </tbody>
                 </table>
@@ -143,51 +143,51 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه</span> - [zə]</td>
+                            <td><span class="text-pashto">زه</span> - <b>[zə]</b></td>
                             <td>Was</td>
-                            <td><span class="text-pashto">وم</span> - [wum]</td>
+                            <td><span class="text-pashto">وم</span> - <b>[wum]</b></td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td><span class="text-pashto">ته</span> - [t̪ə]</td>
+                            <td><span class="text-pashto">ته</span> - <b>[t̪ə]</b></td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وې</span> - [we]</td>
+                            <td><span class="text-pashto">وې</span> - <b>[we]</b></td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو/تاسې</span> - [ˈt̪a.so] / [ˈt̪a.se]</td>
+                            <td><span class="text-pashto">تاسو/تاسې</span> - <b>[ˈt̪a.so] / [ˈt̪a.se]</b></td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وئ</span> - [wej]</td>
+                            <td><span class="text-pashto">وئ</span> - <b>[wej]</b></td>
                         </tr>
                         <tr>
                             <td>He/it</td>
-                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
+                            <td><span class="text-pashto">هغه</span> - <b>[haˈɣa]</b></td>
                             <td>Was</td>
-                            <td><span class="text-pashto">و</span> - [wo]</td>
+                            <td><span class="text-pashto">و</span> - <b>[wo]</b></td>
                         </tr>
                         <tr>
                             <td>She/it</td>
-                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
+                            <td><span class="text-pashto">هغه</span> - <b>[haˈɣa]</b></td>
                             <td>Was</td>
-                            <td><span class="text-pashto">وه</span> - [wa]</td>
+                            <td><span class="text-pashto">وه</span> - <b>[wa]</b></td>
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ</span> - [mung] / <span class="text-pashto">موږ</span> - [mug]</td>
+                            <td><span class="text-pashto">مونږ</span> - <b>[mung] / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وو</span> - [wu]</td>
+                            <td><span class="text-pashto">وو</span> - <b>[wu]</b></td>
                         </tr>
                         <tr>
                             <td>They (masculine)</td>
-                            <td><span class="text-pashto">هغوی</span> - [haˈɣwi]</td>
+                            <td><span class="text-pashto">هغوی</span> - <b>[haˈɣwi]</b></td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وو</span> - [wu]</td>
+                            <td><span class="text-pashto">وو</span> - <b>[wu]</b></td>
                         </tr>
                         <tr>
                             <td>They (feminine)</td>
-                            <td><span class="text-pashto">هغوی</span> - [haˈɣwi]</td>
+                            <td><span class="text-pashto">هغوی</span> - <b>[haˈɣwi]</b></td>
                             <td>Were</td>
-                            <td><span class="text-pashto">وې</span> - [we]</td>
+                            <td><span class="text-pashto">وې</span> - <b>[we]</b></td>
                         </tr>
                     </tbody>
                 </table>
@@ -214,39 +214,39 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه (به)</span> - [zə (ba)]</td>
+                            <td><span class="text-pashto">زه (به)</span> - <b>[zə (ba)]</b></td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">یم</span> - [jəm]</td>
+                            <td><span class="text-pashto">یم</span> - <b>[jəm]</b></td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td><span class="text-pashto">ته (به)</span> - [t̪ə (ba)]</td>
+                            <td><span class="text-pashto">ته (به)</span> - <b>[t̪ə (ba)]</b></td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">یې</span> - [je]</td>
+                            <td><span class="text-pashto">یې</span> - <b>[je]</b></td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو/تاسې (به)</span> - [ˈt̪ɑ.so/ˈt̪ɑ.se (ba)]</td>
+                            <td><span class="text-pashto">تاسو/تاسې (به)</span> - <b>[ˈt̪ɑ.so/ˈt̪ɑ.se (ba)]</b></td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">یئ</span> - [jej]</td>
+                            <td><span class="text-pashto">یئ</span> - <b>[jej]</b></td>
                         </tr>
                         <tr>
                             <td>He/she/it</td>
-                            <td><span class="text-pashto">هغه (به)</span> - [haˈɣa (ba)]</td>
+                            <td><span class="text-pashto">هغه (به)</span> - <b>[haˈɣa (ba)]</b></td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">وي</span> - [wi]</td>
+                            <td><span class="text-pashto">وي</span> - <b>[wi]</b></td>
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ/موږ (به)</span> - [mung/mug (ba)]</td>
+                            <td><span class="text-pashto">مونږ/موږ (به)</span> - <b>[mung/mug (ba)]</b></td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">یو</span> - [ju]</td>
+                            <td><span class="text-pashto">یو</span> - <b>[ju]</b></td>
                         </tr>
                         <tr>
                             <td>They</td>
-                            <td><span class="text-pashto">هغوی (به)</span> - [haˈɣwi (ba)]</td>
+                            <td><span class="text-pashto">هغوی (به)</span> - <b>[haˈɣwi (ba)]</b></td>
                             <td>Will be</td>
-                            <td><span class="text-pashto">وي</span> - [wi]</td>
+                            <td><span class="text-pashto">وي</span> - <b>[wi]</b></td>
                         </tr>
                     </tbody>
                 </table>
