Add IPA pronunciations

--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -86,8 +86,8 @@
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو</span> - <b>[ˈt̪ɑ.so] / <span class="text-pashto">تاسې</span> - <b>[ˈt̪ɑ.se]</b></td>
-                            <td><span class="text-pashto">تاسو</span> - <b>[ˈt̪ɑ.so] / <span class="text-pashto">تاسې</span> - <b>[ˈt̪ɑ.se]</b></td>
+                            <td><span class="text-pashto">تاسو</span> - <b>[ˈt̪ɑ.so]</b> / <span class="text-pashto">تاسې</span> - <b>[ˈt̪ɑ.se]</b></td>
+                            <td><span class="text-pashto">تاسو</span> - <b>[ˈt̪ɑ.so]</b> / <span class="text-pashto">تاسې</span> - <b>[ˈt̪ɑ.se]</b></td>
                         </tr>
                         <tr>
                             <td>He/it</td>
@@ -101,8 +101,8 @@
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ</span> - <b>[mung] / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
-                            <td><span class="text-pashto">مونږ</span> - <b>[mung] / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
+                            <td><span class="text-pashto">مونږ</span> - <b>[mung]</b> / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
+                            <td><span class="text-pashto">مونږ</span> - <b>[mung]</b> / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
                         </tr>
                         <tr>
                             <td>They</td>
