--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -80,7 +80,7 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه</span> - <b></b>[zə]</b></tr>td>
+                            <td><span class="text-pashto">زه</span> - <b>[zə]</b></td>
                             <td>Am</td>
                             <td><span class="text-pashto">یم</span> - <b>[jəm]</b></td>
                         </tr>
@@ -92,7 +92,7 @@
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو/تاسې</span> - <b>[ˈt̪a.so] / [ˈt̪a.se]</b></td>
+                            <td><span class="text-pashto">تاسو/تاسې</span> - <b>[ˈt̪a.so]</b> / <b>[ˈt̪a.se]</b></td>
                             <td>Are</td>
                             <td><span class="text-pashto">یئ</span> - <b>[jej]</b></td>
                         </tr>
@@ -110,7 +110,7 @@
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ</span> - <b>[mung] / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
+                            <td><span class="text-pashto">مونږ</span> - <b>[mung]</b> / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
                             <td>Are</td>
                             <td><span class="text-pashto">یو</span> - <b>[ju]</b></td>
                         </tr>
@@ -155,7 +155,7 @@
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو/تاسې</span> - <b>[ˈt̪a.so] / [ˈt̪a.se]</b></td>
+                            <td><span class="text-pashto">تاسو/تاسې</span> - <b>[ˈt̪a.so]</b> / <b>[ˈt̪a.se]</b></td>
                             <td>Were</td>
                             <td><span class="text-pashto">وئ</span> - <b>[wej]</b></td>
                         </tr>
@@ -173,7 +173,7 @@
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ</span> - <b>[mung] / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
+                            <td><span class="text-pashto">مونږ</span> - <b>[mung]</b> / <span class="text-pashto">موږ</span> - <b>[mug]</b></td>
                             <td>Were</td>
                             <td><span class="text-pashto">وو</span> - <b>[wu]</b></td>
                         </tr>
