--- a/pashto/dictionary/index.html
+++ b/pashto/dictionary/index.html
@@ -39,8 +39,8 @@
 
         </div>
 
-        <div class="container-fluid">
-            <h1>Dictionary</h1>
+        <div class="container-fluid bg-first-color text-white vh-100">
+            <h1 class="p-3">Dictionary</h1>
 
             <div class="row mb-3">
                 <div class="col-12 col-md-8">
