--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -61,6 +61,11 @@
             <h2><a href="pronouns/">Pronouns</a></h2>
             <h2><a href="verbs/">Verbs</a></h2>
         </div>
+
+        <footer class="p-3 bg-dark text-white text-center">
+            <p>Habib Khan</p>
+            <p class="text-pashto">حبیب خان</p>
+        </footer>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/662f0a908b.js" crossorigin="anonymous"></script>
